# real-estate-momentum

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1.0-zl-data-exploration.ipynb  1.0-zl-model-testing.ipynb  analysis.csv
real_estate_momentum/: __init__.py  dataset.py  features.py  plots.py
real_estate_momentum/modeling/: predict.py  train.py
reports/: method_notes.docx  ~$thod_notes.docx
